# narrative-engine

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml
docs/: design.md  user_guide.md
done-work/: implementation_prompts.md
examples/: dinner_party.rs  dino_park.rs  jurassic_park.rs
genre_data/social_drama/: corpus.txt  grammar.ron  voices.ron
genre_data/survival_thriller/: corpus.txt  grammar.ron  voices.ron
narrative-engine-wasm/: Cargo.toml
narrative-engine-wasm/src/: lib.rs
prompt-log/: 2026-02-21.md  2026-02-22.md  2026-02-23.md
src/: lib.rs
src/core/: context.rs  grammar.rs  markov.rs  mod.rs  pipeline.rs  variety.rs  voice.rs
src/genre_templates/: exploration.rs  mod.rs  political_intrigue.rs  social_drama.rs  survival_thriller.rs
src/schema/: entity.rs  event.rs  mod.rs  narrative_fn.rs  relationship.rs
tests/: grammar_tests.rs  markov_tests.rs  pipeline_tests.rs
tests/fixtures/: test_corpus.txt  test_grammar.ron  test_voices.ron
tools/: corpus_trainer.rs  grammar_linter.rs  preview.rs
web-demo/: app.js  index.html  style.css
