[package]
name = "narrative-engine-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for narrative-engine"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
narrative-engine = { path = ".." }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.2", features = ["js"] }
